--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -38,6 +38,7 @@
             android:alignmentMode="alignMargins">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/cate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
