--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/ground"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -56,10 +56,10 @@
 
 
     <Button
-        android:id="@+id/sign"
+        android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="59dp"
-        android:layout_below="@id/confirmp"
+        android:layout_below="@id/password"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:background="#ABEFF6"
@@ -71,7 +71,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/sign"
+        android:layout_below="@id/login"
         android:hint="create An Account"
         android:textSize="30sp"
         android:textStyle="italic"
