--- a/app/src/main/res/layout/activity_girls.xml
+++ b/app/src/main/res/layout/activity_girls.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Boy"
+    tools:context=".Girls"
     android:background="@drawable/ground"
     android:orientation="vertical">
 
@@ -15,10 +15,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Boys Categories"
+            android:text="Girls Categories"
+            android:textColor="@color/black"
             android:textSize="40dp"
             android:textStyle="bold"
-            android:textColor="@color/black"
             android:id="@+id/dashboard"
             android:gravity="center_horizontal" />
 
@@ -50,6 +50,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_weight="1"
+                        android:background="@color/white"
                         app:cardCornerRadius="20dp">
 
 
@@ -63,7 +64,8 @@
                                 android:layout_width="80dp"
                                 android:layout_height="80dp"
                                 android:layout_centerInParent="true"
-                                android:src="@drawable/one" />
+
+                                android:src="@drawable/oneg" />
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -96,7 +98,7 @@
                                 android:layout_width="80dp"
                                 android:layout_height="80dp"
                                 android:layout_centerInParent="true"
-                                android:src="@drawable/two" />
+                                android:src="@drawable/twog" />
 
                             <TextView
                                 android:id="@+id/txt2"
@@ -142,7 +144,7 @@
                                 android:layout_width="80dp"
                                 android:layout_height="80dp"
                                 android:layout_centerInParent="true"
-                                android:src="@drawable/three" />
+                                android:src="@drawable/threeg" />
 
                             <TextView
                                 android:id="@+id/txt3"
@@ -175,7 +177,7 @@
                                 android:layout_width="80dp"
                                 android:layout_height="80dp"
                                 android:layout_centerInParent="true"
-                                android:src="@drawable/four" />
+                                android:src="@drawable/fourg" />
 
                             <TextView
                                 android:id="@+id/txt4"
@@ -221,7 +223,7 @@
                                 android:layout_width="80dp"
                                 android:layout_height="80dp"
                                 android:layout_centerInParent="true"
-                                android:src="@drawable/five" />
+                                android:src="@drawable/fiveg" />
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -254,7 +256,7 @@
                                 android:layout_width="80dp"
                                 android:layout_height="80dp"
                                 android:layout_centerInParent="true"
-                                android:src="@drawable/six" />
+                                android:src="@drawable/fiveg" />
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
