--- a/app/src/main/res/layout/activity_boy.xml
+++ b/app/src/main/res/layout/activity_boy.xml
@@ -46,6 +46,7 @@
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
+                        android:id="@+id/c1"
                         android:layout_height="160dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
@@ -79,6 +80,7 @@
                     </androidx.cardview.widget.CardView>
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
+                        android:id="@+id/c2"
                         android:layout_height="160dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
@@ -125,6 +127,7 @@
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
+                        android:id="@+id/c3"
                         android:layout_height="160dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
@@ -159,6 +162,7 @@
                     </androidx.cardview.widget.CardView>
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
+                        android:id="@+id/c4"
                         android:layout_height="160dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
@@ -204,6 +208,7 @@
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
+                        android:id="@+id/c5"
                         android:layout_height="160dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
@@ -237,6 +242,7 @@
                     </androidx.cardview.widget.CardView>
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
+                        android:id="@+id/c6"
                         android:layout_height="160dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
