--- a/app/src/main/res/layout/activity_girls.xml
+++ b/app/src/main/res/layout/activity_girls.xml
@@ -46,6 +46,7 @@
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
+                        android:id="@+id/g1"
                         android:layout_height="160dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
@@ -61,11 +62,11 @@
 
                             <ImageView
                                 android:id="@+id/img1"
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:layout_centerInParent="true"
+                                android:layout_width="match_parent"
+                                android:layout_height="120dp"
 
                                 android:src="@drawable/oneg" />
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -81,6 +82,7 @@
                     </androidx.cardview.widget.CardView>
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
+                        android:id="@+id/g2"
                         android:layout_height="160dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
@@ -95,9 +97,8 @@
 
                             <ImageView
                                 android:id="@+id/img2"
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:layout_centerInParent="true"
+                                android:layout_width="match_parent"
+                                android:layout_height="120dp"
                                 android:src="@drawable/twog" />
 
                             <TextView
@@ -114,10 +115,6 @@
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
 
-
-
-
-
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -126,6 +123,7 @@
                     >
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/g3"
                         android:layout_width="0dp"
                         android:layout_height="160dp"
                         android:layout_marginLeft="8dp"
@@ -141,9 +139,8 @@
 
                             <ImageView
                                 android:id="@+id/img3"
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:layout_centerInParent="true"
+                                android:layout_width="match_parent"
+                                android:layout_height="120dp"
                                 android:src="@drawable/threeg" />
 
                             <TextView
@@ -161,6 +158,7 @@
                     </androidx.cardview.widget.CardView>
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
+                        android:id="@+id/g4"
                         android:layout_height="160dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
@@ -174,9 +172,8 @@
 
                             <ImageView
                                 android:id="@+id/img4"
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:layout_centerInParent="true"
+                                android:layout_width="match_parent"
+                                android:layout_height="120dp"
                                 android:src="@drawable/fourg" />
 
                             <TextView
@@ -192,11 +189,6 @@
 
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
-
-
-
-
-
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -206,6 +198,7 @@
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
+                        android:id="@+id/g5"
                         android:layout_height="160dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
@@ -220,10 +213,10 @@
 
                             <ImageView
                                 android:id="@+id/img5"
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:layout_centerInParent="true"
+                                android:layout_width="match_parent"
+                                android:layout_height="120dp"
                                 android:src="@drawable/fiveg" />
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -239,6 +232,7 @@
                     </androidx.cardview.widget.CardView>
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
+                        android:id="@+id/g6"
                         android:layout_height="160dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
@@ -253,10 +247,10 @@
 
                             <ImageView
                                 android:id="@+id/img6"
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:layout_centerInParent="true"
+                                android:layout_width="match_parent"
+                                android:layout_height="120dp"
                                 android:src="@drawable/fiveg" />
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
